@@ -531,7 +531,7 @@ class Polygon(Patch):
     def __str__(self):
         return "Poly((%g, %g) ...)" % tuple(self._path.vertices[0])
 
-    def __init__(self, xy, **kwargs):
+    def __init__(self, xy, closed=True, **kwargs):
         """
         xy is a numpy array with shape Nx2
 
@@ -541,7 +541,7 @@ class Polygon(Patch):
         """
         Patch.__init__(self, **kwargs)
         xy = np.asarray(xy, np.float_)
-        if len(xy) and xy[0] != xy[-1]:
+        if closed and len(xy) and (xy[0] != xy[-1]).any():
                 xy = np.concatenate([xy, [xy[0]]])
         self._path = Path(xy)
     __init__.__doc__ = cbook.dedent(__init__.__doc__) % artist.kwdocd
